--- a/number detection.ipynb
+++ b/number detection.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 30,
       "metadata": {
         "id": "FkrQx_MN_MsE"
       },
@@ -27,16 +27,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x1f9d0abfd30>"
+              "<matplotlib.image.AxesImage at 0x1f9d0c93730>"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         },
